# peak_cam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nodelet.xml  package.xml
.github/workflows/: ros_ci.yml
cfg/: PeakCam.cfg
docs/: PEAK_NODES.txt  wiring-external-trigger.drawio  wiring-flash-output-trigger-input.drawio
include/peak_cam/: acquisition_parameters.hpp  peak_cam.hpp  peak_cam_node.hpp
launch/: front.launch.py  left.launch.py  peak_cam.launch.py  peak_cam_node.launch  rear.launch.py  right.launch.py
launch/params/: front.yaml  left.yaml  peak_cam_params.yaml  rear.yaml  right.yaml
params/intrinsics/: default_camera_info.yaml  front_camera_info.yaml  left_camera_info.yaml  rear_camera_info.yaml  right_camera_info.yaml
params/settings/: front.yaml  left.yaml  peak_cam_params.yaml  rear.yaml  right.yaml
src/: acquisition_parameters.hpp  peak_cam.cpp  peak_cam.hpp  peak_cam_node.cpp
