<?xml version="1.0"?>
<package format="2">
  <name>peak_cam</name>
  <version>0.0.1</version>
  <description>The peak cam package</description>

  <maintainer email="sherif.nekkah@gmail.com">Sherif Nekkah</maintainer>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
