<?xml version="1.0"?>
<package format="2">
  <name>peak_cam</name>
  <version>0.0.1</version>
  <description>The peak cam package</description>

  <maintainer email="sherif.nekkah@gmail.com">Sherif Nekkah</maintainer>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
